# TaskToDo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  calculator.c  function.c  functions.c  functions.h  install.sh  main.c  test_glade.glade  window_main.glade
.github/workflows/: .clang-format  main.yml
data/: #window_main.glade#  window_home.glade~  window_main.glade  window_main.glade~
settings/: bdd.c  config.txt
